fix: se agrega campos activo Partido
