# src/main/java/PortalRegistraduriaBack/dtos/partido/UpdatePartidoDTO.java
@@ -3,11 +3,12 @@ package PortalRegistraduriaBack.dtos.partido;
 import lombok.Data;
 
 @Data
-public class CreatePartidoDTO {
+public class UpdatePartidoDTO {
 
+  private Long idPartido;
   private String nombre;
   private String sigla;
   private Boolean activo;
   private Long idRegistrador;
-  
+
 }
